Window manager post

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,4 +1,3 @@
-
 .highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
@@ -19,7 +18,7 @@ code {
 .highlight .g { color: #93A1A1 } /* Generic */
 .highlight .k { color: #859900 } /* Keyword */
 .highlight .l { color: #93A1A1 } /* Literal */
-.highlight .n { color: #93A1A1 } /* Name */
+.highlight .n { color: rgb(93, 99, 99) } /* Name */
 .highlight .o { color: #859900 } /* Operator */
 .highlight .x { color: #CB4B16 } /* Other */
 .highlight .p { color: #93A1A1 } /* Punctuation */
