--- a/style.scss
+++ b/style.scss
@@ -265,6 +265,9 @@ sup {
 }
 
 .post {
+  text-align: justify;
+  text-justify: inter-word;
+
   blockquote {
     margin: 1.8em .8em;
     border-left: 2px solid $gray;
