--- a/style.scss
+++ b/style.scss
@@ -241,6 +241,16 @@ nav {
 // .main
 //
 
+.video_container {
+  width: 100%;
+  height: auto;
+}
+
+video {
+  width: 100%;
+  height: auto;
+}
+
 sup {
   vertical-align: top;
   font-size: 0.6em;
