--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -10,6 +10,11 @@ code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
 
+// `those` words
+.highlighter-rouge {
+  color: black;
+}
+
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
 .highlight .g { color: #93A1A1 } /* Generic */
