better code CSS
Now backtick blocks don't look awful and double-boxed. I'll switch
everything to that style.

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,9 +1,12 @@
-.highlight {
+// Handle both ``` and {% highlight %} code blocks
+.entry > .highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  margin: 20px 0 20px 0;
-  overflow-y: hidden;
+}
+
+.highlight > .highlight {
+  background-color: #efefef;
+  padding: 7px 7px 7px 10px;
 }
 
 code {
