hide scrollbar on code when unneeded

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -4,7 +4,7 @@
   border-radius: 2px;
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 code {
