--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,9 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
+    {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
+    {% endif %}
   </head>
 
   <body>
