new post about filesystems

--- a/style.scss
+++ b/style.scss
@@ -66,8 +66,6 @@ h4 {
 
 p {
   margin: 15px 0;
-  text-align: justify;
-  text-justify: inter-word;
 }
 
 a {
@@ -316,6 +314,7 @@ figcaption {
 /* Anecdote */
 .tooltip {
   cursor: pointer;
+  color: $blue
 }
 
 .tooltip span {
@@ -330,6 +329,7 @@ figcaption {
 
 .tooltip:hover span {
   display: inline-block;
+  color: $darkGray;
   position: absolute;
 }
 
