--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,3 +16,6 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+    {% if page.thumbnail %}
+    <meta property="og:thumbnail" content="{{ page.thumbnail }}" />
+    {% endif %}
