--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,13 +11,14 @@ $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
-$lightGray: #eee;
-$white: #fff;
+$lightGray: #ebe8e0;
+$white: #fbf9f0;
+
+@import url('https://fonts.googleapis.com/css?family=Avenir');
 
 // Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
+$helvetica: "Palatino Linotype", Arial;
+$helveticaNeue: "Avenir", Arial;
 
 // Mobile breakpoints
 @mixin mobile {
