--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /***************/
 /* MEYER RESET */
 /***************/
+@import url("https://fonts.googleapis.com/css?family=Avenir");
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -64,8 +66,8 @@ html {
 }
 
 body {
-  background: #fff;
-  font: 18px/1.4 Helvetica, Arial, sans-serif;
+  background: #fbf9f0;
+  font: 16pt "Palatino Linotype", Arial;
   color: #333;
 }
 
@@ -77,7 +79,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Avenir", Arial;
   color: #222;
   font-weight: bold;
   line-height: 1.7;
@@ -168,14 +170,9 @@ img {
   color: #666;
 }
 
-::-moz-selection {
-  color: #000;
-  background: #eee;
-}
-
 ::selection {
-  color: #000;
-  background: #eee;
+  color: white;
+  background: #4183C4;
 }
 
 .clearfix:before,
@@ -197,7 +194,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ebe8e0;
 }
 @media screen and (max-width: 640px) {
   .masthead {
@@ -237,7 +234,7 @@ img {
   margin: 0;
   color: #333;
   cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Avenir", Arial;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -257,7 +254,7 @@ img {
 nav {
   float: right;
   margin-top: 23px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Avenir", Arial;
   font-size: 18px;
 }
 @media screen and (max-width: 640px) {
@@ -289,8 +286,9 @@ nav a {
 
 figcaption {
   text-align: center;
-  font-style: italic;
   font-size: smaller;
+  margin-top: 10px;
+  font-family: Avenir;
 }
 
 .post video {
@@ -310,7 +308,7 @@ figcaption {
 /* Main page post list */
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ebe8e0;
 }
 
 .posts > .post h1 {
@@ -371,7 +369,7 @@ figcaption {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: #eee;
+  background-color: #fbf9f0;
 }
 
 footer {
@@ -382,13 +380,16 @@ footer {
 .highlight > .highlight,
 .entry > .highlight {
   border-radius: 2px;
-  background-color: #efefef;
+  background-color: #ebe8e0;
   padding: 7px 7px 7px 10px;
   overflow-x: auto;
 }
 
 code {
-  font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: 'Source Code Pro', 'Courier', monospace;
+  font-size: 14pt;
+  background-color: #ebe8e0;
+  border-radius: 3px;
 }
 
 .highlighter-rouge {
