fix Avenir font, hopefully

--- a/style.scss
+++ b/style.scss
@@ -249,7 +249,7 @@ figcaption {
   text-align: center;
   font-size: smaller;
   margin-top: 10px;
-  font-family: Avenir;
+  font-family: $helveticaNeue;
 }
 
 .post video {
