--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $white: #fbf9f0;
 
 // Font stacks
 $helvetica: "Palatino Linotype", serif;
-$helveticaNeue: "Avenir", "Gill Sans", sans-serif;
+$helveticaNeue: "Avenir", "Montserrat", "Gill Sans", sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
