--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ html {
 
 body {
   background: #fbf9f0;
-  font: 14pt "Palatino Linotype", Arial;
+  font: 14pt "Palatino Linotype", serif;
   color: #333;
 }
 
@@ -77,7 +77,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Avenir", Arial;
+  font-family: "Avenir", "Montserrat", "Gill Sans", sans-serif;
   color: #222;
   font-weight: bold;
   line-height: 1.7;
@@ -232,7 +232,7 @@ img {
   margin: 0;
   color: #333;
   cursor: pointer;
-  font-family: "Avenir", Arial;
+  font-family: "Avenir", "Montserrat", "Gill Sans", sans-serif;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -252,7 +252,7 @@ img {
 nav {
   float: right;
   margin-top: 23px;
-  font-family: "Avenir", Arial;
+  font-family: "Avenir", "Montserrat", "Gill Sans", sans-serif;
   font-size: 18px;
 }
 @media screen and (max-width: 640px) {
@@ -286,7 +286,7 @@ figcaption {
   text-align: center;
   font-size: smaller;
   margin-top: 10px;
-  font-family: "Avenir", Arial;
+  font-family: "Avenir", "Montserrat", "Gill Sans", sans-serif;
 }
 
 .post video {
