--- a/style.scss
+++ b/style.scss
@@ -111,6 +111,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 3px;
 }
 
 // Fixes images in popup boxes from Google Translate
