--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -17,5 +17,5 @@
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
     {% if page.thumbnail %}
-    <meta property="og:thumbnail" content="{{ page.thumbnail }}" />
+    <meta property="og:image" content="{{ page.thumbnail }}" />
     {% endif %}
