--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">SnowflakeOS</a>
-            <a href="{{ site.baseurl }}/hiking">Hiking</a>
+            <!-- <a href="{{ site.baseurl }}/hiking">Hiking</a> -->
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
